--- a/src/main/resources/templates/web/trangchu.html
+++ b/src/main/resources/templates/web/trangchu.html
@@ -67,7 +67,7 @@
         <div id="footer">
             <script src="/js/web/components/footer_web.js"></script>
         </div>
-
+    </div>
 </body>
 
 </html>
