--- a/src/main/resources/templates/web/xem-giao-trinh.html
+++ b/src/main/resources/templates/web/xem-giao-trinh.html
@@ -75,7 +75,7 @@
             </div> 
            
              <input type="checkbox" hidden name="" class="nav-input" id="nav_mobile_input">
-             <div class="mobile_tablet_menu">
+             <div class="mobile_tablet_menu hide-on-desktop">
                 <nav  class="nav_mobile_Tablet">
                     <label for="nav_mobile_input">
                         <i style="margin-left: 207px;
